# pico-gba-cart

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: cmake-pico.yml
gba/: CMakeLists.txt  main.c
hw/pga2040/: gba-cart.kicad_pcb  gba-cart.kicad_pro  gba-cart.kicad_sch
hw/rp2040/: gba-cart.kicad_pcb  gba-cart.kicad_pro  gba-cart.kicad_sch
lib/: CMakeLists.txt  gba-cart.pio  gbacart.cpp  memmap_2350.ld
